--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "formik": "^2.2.9",
     "libphonenumber-js": "^1.10.28",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-phone-number-input": "^3.2.20",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
+    "recharts": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
