--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fortawesome": "^0.0.1-security",
     "libphonenumber-js": "^1.10.28",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.7.4",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
