--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "country-state-city": "^3.1.4",
     "font-awesome": "^4.7.0",
@@ -22,6 +23,7 @@
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-paginate": "^8.2.0",
     "react-phone-number-input": "^3.2.20",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
