--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
+    "react-select-country-list": "^2.2.3",
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
     "web-vitals": "^2.1.4"
